--- a/frontend/src/lib/styles/constants.scss
+++ b/frontend/src/lib/styles/constants.scss
@@ -5,3 +5,7 @@ $H3_SIZE: 1.285rem;
 $H4_SIZE: 1.15rem;
 $H5_SIZE: 1.075rem;
 $H6_SIZE: 1rem;
+
+// COLOURS
+$ACTIVE_BLUE: rgba(48, 227, 202, 1);
+$LIGHT_BLUE: rgba(228, 249, 245, 1);
