--- a/frontend/src/lib/styles/constants.scss
+++ b/frontend/src/lib/styles/constants.scss
@@ -7,5 +7,26 @@ $H5_SIZE: 1.075rem;
 $H6_SIZE: 1rem;
 
 // COLOURS
-$ACTIVE_BLUE: rgba(48, 227, 202, 1);
-$LIGHT_BLUE: rgba(228, 249, 245, 1);
+$LIGHT_TEAL: rgba(228, 249, 245, 1);
+$LIGHT_TEAL_75: rgba(228, 249, 245, 0.75);
+$LIGHT_TEAL_50: rgba(228, 249, 245, 0.5);
+$LIGHT_TEAL_25: rgba(228, 249, 245, 0.25);
+$LIGHT_TEAL_10: rgba(228, 249, 245, 0.1);
+
+$TEAL: rgba(48, 227, 202, 1);
+$TEAL_75: rgba(48, 227, 202, 0.75);
+$TEAL_50: rgba(48, 227, 202, 0.5);
+$TEAL_25: rgba(48, 227, 202, 0.25);
+$TEAL_10: rgba(48, 227, 202, 0.1);
+
+$BLUE: rgba(48, 227, 202, 1);
+$BLUE_75: rgba(48, 227, 202, 0.75);
+$BLUE_50: rgba(48, 227, 202, 0.5);
+$BLUE_25: rgba(48, 227, 202, 0.25);
+$BLUE_10: rgba(48, 227, 202, 0.1);
+
+$DEEP_BLUE: rgba(64, 81, 78, 1);
+$DEEP_BLUE_75: rgba(64, 81, 78, 0.75);
+$DEEP_BLUE_50: rgba(64, 81, 78, 0.5);
+$DEEP_BLUE_25: rgba(64, 81, 78, 0.25);
+$DEEP_BLUE_10: rgba(64, 81, 78, 0.1);
