--- a/frontend/src/lib/styles/constants.scss
+++ b/frontend/src/lib/styles/constants.scss
@@ -1,3 +1,5 @@
+@import 'functions';
+
 // HEADER SIZES
 $H1_SIZE: 2rem;
 $H2_SIZE: 1.5rem;
@@ -7,26 +9,26 @@ $H5_SIZE: 1.075rem;
 $H6_SIZE: 1rem;
 
 // COLOURS
-$LIGHT_TEAL: rgba(228, 249, 245, 1);
-$LIGHT_TEAL_75: rgba(228, 249, 245, 0.75);
-$LIGHT_TEAL_50: rgba(228, 249, 245, 0.5);
-$LIGHT_TEAL_25: rgba(228, 249, 245, 0.25);
-$LIGHT_TEAL_10: rgba(228, 249, 245, 0.1);
+$LIGHT_TEAL: rgb(228, 249, 245);
+$LIGHT_TEAL_75: tint($LIGHT_TEAL, 75%);
+$LIGHT_TEAL_50: tint($LIGHT_TEAL, 50%);
+$LIGHT_TEAL_25: tint($LIGHT_TEAL, 25%);
+$LIGHT_TEAL_10: tint($LIGHT_TEAL, 10%);
 
-$TEAL: rgba(48, 227, 202, 1);
-$TEAL_75: rgba(48, 227, 202, 0.75);
-$TEAL_50: rgba(48, 227, 202, 0.5);
-$TEAL_25: rgba(48, 227, 202, 0.25);
-$TEAL_10: rgba(48, 227, 202, 0.1);
+$TEAL: rgb(48, 227, 202);
+$TEAL_75: tint($TEAL, 75%);
+$TEAL_50: tint($TEAL, 50%);
+$TEAL_25: tint($TEAL, 25%);
+$TEAL_10: tint($TEAL, 10%);
 
-$BLUE: rgba(48, 227, 202, 1);
-$BLUE_75: rgba(48, 227, 202, 0.75);
-$BLUE_50: rgba(48, 227, 202, 0.5);
-$BLUE_25: rgba(48, 227, 202, 0.25);
-$BLUE_10: rgba(48, 227, 202, 0.1);
+$BLUE: rgb(48, 227, 202);
+$BLUE_75: tint($BLUE, 75%);
+$BLUE_50: tint($BLUE, 50%);
+$BLUE_25: tint($BLUE, 25%);
+$BLUE_10: tint($BLUE, 10%);
 
-$DEEP_BLUE: rgba(64, 81, 78, 1);
-$DEEP_BLUE_75: rgba(64, 81, 78, 0.75);
-$DEEP_BLUE_50: rgba(64, 81, 78, 0.5);
-$DEEP_BLUE_25: rgba(64, 81, 78, 0.25);
-$DEEP_BLUE_10: rgba(64, 81, 78, 0.1);
+$DEEP_BLUE: rgb(64, 81, 78);
+$DEEP_BLUE_75: tint($DEEP_BLUE, 75%);
+$DEEP_BLUE_50: tint($DEEP_BLUE, 50%);
+$DEEP_BLUE_25: tint($DEEP_BLUE, 25%);
+$DEEP_BLUE_10: tint($DEEP_BLUE, 10%);
