--- a/frontend/src/lib/styles/components/_buttons.scss
+++ b/frontend/src/lib/styles/components/_buttons.scss
@@ -13,6 +13,25 @@
 	}
 }
 
+.connected-btn {
+	align-items: center;
+	background-color: transparent;
+	border-radius: 6px;
+	border: none;
+	cursor: pointer;
+	display: flex;
+	font-weight: 550;
+	gap: 1rem;
+	justify-content: center;
+	padding: 0.75rem;
+	width: min-content;
+
+	img {
+		max-height: 20px;
+		max-width: 20px;
+	}
+}
+
 .shadow-btn {
 	background-color: $TEAL;
 	border-radius: 8px;
