--- a/frontend/src/lib/styles/components/_buttons.scss
+++ b/frontend/src/lib/styles/components/_buttons.scss
@@ -28,9 +28,14 @@
 	padding: 0.75rem;
 	width: min-content;
 
-	img {
+	img,
+	svg {
 		max-height: 20px;
 		max-width: 20px;
+	}
+
+	@media (max-width: 680px) {
+		padding: 0.25rem;
 	}
 }
 
