--- a/frontend/src/lib/styles/global.scss
+++ b/frontend/src/lib/styles/global.scss
@@ -31,3 +31,16 @@
 		color: var(--color-secondary);
 	}
 }
+
+html,
+body {
+	min-height: 100%;
+	margin: 0;
+}
+
+ul,
+ol {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
